product card design

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <h3>BUY</h3>
+    <h1>BUY</h1>
 
     <ul>
         <li>About</li>
@@ -28,11 +28,27 @@
 
 
 
+<section class="prdt-section">
+<input type="search" placeholder="search..." class="search">
 
 
+<!-- product container -->
+
+
+<div class="container">
+
+
+  <div class="prdt-card">
 
     
 
+ </div>
+
+
+</div>
+
+    
+</section>
 
 
     <script src="script.js">
